# PROJECT_TEMPLATE

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  main.cpp  version.h
src/detail/: auto_defined_version.h.in
test/: CMakeLists.txt  test_dummy1.cpp  test_dummy2.cpp
